--- a/humorpage/package.json
+++ b/humorpage/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
     "jquery": "^1.9.1",
+    "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
