글 작성 임시 저장소 필요 temporaryFileStore 해당 저장소로 유저 글 작성 완료시 사진은 그대로 저장소에 넘기고 영상은 코덱 변환하여 저장소에 넘겨야함

--- a/sunbro/pom.xml
+++ b/sunbro/pom.xml
@@ -105,6 +105,12 @@
             <version>2.9.2</version>
         </dependency>
 
+        <!-- FFMPEG video converter-->
+        <dependency>
+            <groupId>net.bramp.ffmpeg</groupId>
+            <artifactId>ffmpeg</artifactId>
+            <version>0.6.2</version>
+        </dependency>
 
 
         <dependency>
