--- a/humorpage/package.json
+++ b/humorpage/package.json
@@ -13,6 +13,8 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-dropzone": "^11.2.4",
+    "react-ffmpeg": "0.0.25",
+    "react-player": "^2.8.2",
     "react-quill": "^1.3.5",
     "react-redux": "^6.0.0",
     "react-router-dom": "^5.2.0",
