--- a/humorpage/package.json
+++ b/humorpage/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-regular-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -21,6 +26,7 @@
     "react-scripts": "3.4.4",
     "react-virtualized": "^9.22.2",
     "redux": "^4.0.1",
+    "sanitize-html-react": "^1.13.0",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
