--- a/humorpage/package.json
+++ b/humorpage/package.json
@@ -11,14 +11,10 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
-    "jquery": "^1.9.1",
-    "js-ffmpeg": "0.0.27",
-    "lodash": "^4.17.20",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-dropzone": "^11.2.4",
     "react-ffmpeg": "0.0.25",
-    "react-player": "^2.8.2",
     "react-quill": "^1.3.5",
     "react-redux": "^6.0.0",
     "react-router-dom": "^5.2.0",
@@ -26,7 +22,7 @@
     "react-virtualized": "^9.22.2",
     "redux": "^4.0.1",
     "sanitize-html-react": "^1.13.0",
-    "typescript": "^4.1.3",
+    "typescript": "^4.2.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -53,12 +49,6 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "chokidar": "^3.4.3",
-    "connect-history-api-fallback": "^1.5.0",
-    "cors": "^2.8.5",
-    "json-server": "^0.14.2",
-    "jsonwebtoken": "^8.1.1"
-  },
+  "devDependencies": {},
   "proxy": "http://localhost:8080"
 }
