--- a/humorpage/package.json
+++ b/humorpage/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.14.0",
     "react-dropzone": "^11.2.4",
     "react-ffmpeg": "0.0.25",
+    "react-kakao-login": "^2.1.0",
     "react-quill": "^1.3.5",
     "react-redux": "^6.0.0",
     "react-router-dom": "^5.2.0",
@@ -22,6 +23,7 @@
     "react-virtualized": "^9.22.2",
     "redux": "^4.0.1",
     "sanitize-html-react": "^1.13.0",
+    "styled-components": "^5.2.1",
     "typescript": "^4.2.2",
     "web-vitals": "^0.2.4"
   },
