--- a/humorpage/package.json
+++ b/humorpage/package.json
@@ -14,8 +14,11 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-dropzone": "^11.2.4",
+    "react-facebook-login": "^4.1.1",
     "react-ffmpeg": "0.0.25",
+    "react-google-login": "^5.2.2",
     "react-kakao-login": "^2.1.0",
+    "react-naver-login": "^0.1.4",
     "react-quill": "^1.3.5",
     "react-redux": "^6.0.0",
     "react-router-dom": "^5.2.0",
