--- a/.gitignore
+++ b/.gitignore
@@ -146,4 +146,4 @@ buildNumber.properties
 # End of https://www.toptal.com/developers/gitignore/api/intellij,maven,java
 
 ### jwt token key ###
-application.properties
+*.properties
