--- a/sunbro/pom.xml
+++ b/sunbro/pom.xml
@@ -71,11 +71,9 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <version>2.4.1</version>
         </dependency>
-        <!-- Mail Sender-->
         <dependency>
-            <groupId>javax.mail</groupId>
-            <artifactId>mail</artifactId>
-            <version>1.4.7</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
         <dependency>
