--- a/sunbro/src/main/resources/ffmpeg.properties
+++ b/sunbro/src/main/resources/ffmpeg.properties
@@ -1,2 +1,2 @@
-video.ffmpeg.path = ffmpeg.exe 경로
-video.ffprobe.path = ffprobe.exe 경로
+video.ffmpeg.path = C:/Users/tjsh0/OneDrive/Desktop/ffmpeg-4.3.2-2021-02-02-full_build/bin/ffmpeg.exe
+video.ffprobe.path = C:/Users/tjsh0/OneDrive/Desktop/ffmpeg-4.3.2-2021-02-02-full_build/bin/ffprobe.exe
