--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,6 @@ buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij,maven,java
+
+### jwt token key ###
+*.properties
