--- a/sunbro/src/main/resources/mail.properties
+++ b/sunbro/src/main/resources/mail.properties
@@ -7,5 +7,5 @@ mail.smtp.port=465
 mail.smtp.socketFactory.port=465
 
 #admin 구글 아이디 계정 id,password
-AdminMail.id =
-AdminMail.password =
+AdminMail.id = nogarypeople@gmail.com
+AdminMail.password = *s5827253
