--- a/humorpage/package.json
+++ b/humorpage/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
@@ -21,7 +22,7 @@
     "react-quill": "^1.3.5",
     "react-redux": "^6.0.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.4",
+    "react-scripts": "^4.0.3",
     "react-virtualized": "^9.22.2",
     "redux": "^4.0.1",
     "sanitize-html-react": "^1.13.0",
@@ -30,8 +31,9 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "dev-start": "react-scripts start",
+    "start": "webpack-dev-server --progress --colors --config webpack.dev.js",
+    "build": "cross-env NODE_ENV=production webpack -p --config webpack.prod.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -53,6 +55,21 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {},
-  "proxy": "http://localhost:8080"
+  "devDependencies": {
+    "@babel/cli": "^7.13.10",
+    "@babel/core": "^7.13.13",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-react": "^7.13.13",
+    "@svgr/webpack": "^5.5.0",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-styled-components": "^1.12.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^7.0.3",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^4.5.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3"
+  }
 }
