--- a/humorpage/nginx.conf
+++ b/humorpage/nginx.conf
@@ -1,5 +1,9 @@
 server {
     listen 3000;
+    location ^~ /.well-known/acme-challenge/ {
+                default_type "text/plain";
+                root /var/www/minussl;
+    }
     location / {
         root    /app/build;
         index   index.html;
