--- a/humorpage/DockerFile
+++ b/humorpage/DockerFile
@@ -19,6 +19,9 @@ RUN rm /etc/nginx/conf.d/default.conf
 # host pc 의 nginx.conf 를 아래 경로에 복사
 COPY ./nginx.conf /etc/nginx/conf.d
 
+# host pc 의 https.conf
+COPY ./https.conf /etc/nginx/conf.d
+
 # 80 포트 오픈
 EXPOSE 80
 
