--- a/humorpage/https.conf
+++ b/humorpage/https.conf
@@ -4,7 +4,7 @@ server {
     ssl_certificate_key  /var/www/seono/privkey1.pem;
 
     ssl_session_timeout  5m;
-    ssl_protocols  SSLv2 SSLv3 TLSv1.2 TLSv1.3;
+    ssl_protocols  TLSv1.2 TLSv1.3;
     ssl_ciphers  HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers   on;
 
