update: 	-font mypage 좋아요 column명 수정 	-nginx http redirect 설정
update-next:
	-upload, update 기능 재확인 (플랫폼 미디어 비율 확인)
	-next 버튼 생성
	-패스워드 찾기 기능 백엔드 구현 및 연결 필요
todo:
	-history.push 수정 필요 -> SPA에 맞게 페이지 팝업 및 불필요한 push 제거
	-Spring boot Cookie samesite설정
	-유저 nickname 길이 제한
	-React redux 사용
	-throttle, debounce 적용

--- a/humorpage/https.conf
+++ b/humorpage/https.conf
@@ -30,3 +30,10 @@ server {
         try_files $uri $uri/ /index.html;
     }
 }
+
+#http 요청 리다이렉트
+server {
+    listen 80;
+    server_name seono.org;
+    return 301 https://$host$request_uri;
+}
