--- a/humorpage/package.json
+++ b/humorpage/package.json
@@ -16,11 +16,10 @@
     "react-kakao-login": "^2.1.0",
     "react-naver-login": "^0.1.4",
     "react-quill": "^1.3.5",
-    "react-redux": "^6.0.0",
+    "react-resize-detector": "^6.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-virtualized": "^9.22.2",
-    "redux": "^4.0.1",
     "sanitize-html-react": "^1.13.0",
     "styled-components": "^5.2.1",
     "typescript": "^4.2.2",
