--- a/humorpage/package.json
+++ b/humorpage/package.json
@@ -13,6 +13,7 @@
     "react-dropzone": "^11.2.4",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
+    "react-hls-player": "^3.0.1",
     "react-kakao-login": "^2.1.0",
     "react-naver-login": "^0.1.4",
     "react-quill": "^1.3.5",
