update: 	모바일 헤더 완료 update-next: 	마이메뉴 구현

--- a/mobile/https.conf
+++ b/mobile/https.conf
@@ -2,9 +2,22 @@ server {
 
     ssl_certificate      /var/www/seono/fullchain1.pem;
     ssl_certificate_key  /var/www/seono/privkey1.pem;
-
+    
+    # !:제외함
+    # aNULL:인증 기능이 없는 cipher suite. 따라서 Man-In-The-Middle (MITM) 공격에 취약함
+    # eNULL(NULL):암호화하지 않는 cipher suite(null-encryption ciphers).
+    # EXPORT:미국의 관련 법에 따라 수출이 가능한 40, 56 Bits의 약한 cipher suite.
+    # DES:DES를 사용하는 cipher suite.
+    # MD5:MD5를 사용하는 cipher suite.
+    # PSK:PSK(pre-shared keys)를 사용하는 cipher suite.
+    # RC4:RC4를 사용하는 cipher suite.
+    # HIGH:"High" 수준의 cipher suites의 목록입니다. OpenSSL 버전마다 포함되는 cipher suite가 다르며, 현재는 128 bit 보다 큰 키 길이를 가지는 cipher를 사용하는 cipher suite입니다.
+    # MEDIUM:"Medium" 수준의 cipher suites의 목록입니다. OpenSSL 버전마다 포함되는 cipher suite가 다르며, 현재는 128 bit 암호를 사용하는 cipher suite입니다.
+    # LOW:"Low" 수준의 cipher suites의 목록입니다. OpenSSL 버전마다 포함되는 cipher suite가 다르며, 현재는 64/56 bit 암호를 사용하는 cipher suite입니다. 하지만 Export 수준의 cipher suite들은 제외합니다.
+    # @STRENGTH:암호화 알고리즘(Encryption Algorithm) 키 길이의 순서로 현재 cipher 목록을 정렬하기 위해 사용할 수 있습니다.
+    
     ssl_session_timeout  5m;
-    ssl_protocols  SSLv2 SSLv3 TLSv1.2 TLSv1.3;
+    ssl_protocols  TLSv1.2 TLSv1.3;
     ssl_ciphers  HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers   on;
 
@@ -16,4 +29,11 @@ server {
         index  index.html;
         try_files $uri $uri/ /index.html;
     }
+}
+
+#http 요청 리다이렉트
+server {
+    listen 80;
+    server_name seono.org;
+    return 301 https://$host$request_uri;
 }
