--- a/mobile/.babelrc
+++ b/mobile/.babelrc
@@ -2,6 +2,7 @@
     "presets": ["@babel/preset-react","@babel/preset-env"],
     "plugins": [
         "@babel/plugin-proposal-class-properties",
-        "babel-plugin-styled-components"
+        "babel-plugin-styled-components",
+        "@babel/transform-runtime"
     ]
 }
