--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,13 +1,9 @@
 {
-  "name": "humorpage",
+  "name": "humorpage_mobile",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-regular-svg-icons": "^5.15.2",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
-    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -17,14 +13,13 @@
     "react-dropzone": "^11.2.4",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
+    "react-hls-player": "^3.0.1",
     "react-kakao-login": "^2.1.0",
     "react-naver-login": "^0.1.4",
     "react-quill": "^1.3.5",
-    "react-redux": "^6.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-virtualized": "^9.22.2",
-    "redux": "^4.0.1",
     "sanitize-html-react": "^1.13.0",
     "styled-components": "^5.2.1",
     "typescript": "^4.2.2",
